# wireguard-install

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md
.serena/: project.yml
docs/: CLIENT_IMPLEMENTATION.md
examples/: client_examples.rs  list_clients_demo.rs  revoke_client_demo.rs  test_list_clients.rs
packaging/debian/: postinst  postrm  wgmanagement-sudoers  wireguard-install-wrapper.sh
src/: checks.rs  client.rs  enums.rs  initialization.rs  install.rs  interface.rs  lib.rs  main.rs  migration.rs  models.rs  network.rs  os_detection.rs  test_tool.rs  tests.rs  uninstall.rs  utils.rs
tests/: client_tests.rs
