[package]
name = "wireguard-install"
version = "0.1.0"
edition = "2024"

[lib]
name = "wireguard_install"
path = "src/lib.rs"

[[bin]]
name = "wireguard-install"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
dialoguer = "0.12.0"
dotenv = "0.15.0"
heim-virt = "0.0.11"
ipnetwork = "0.20"
libc = "0.2.180"
netwatcher = "0.4.1"
qrcode = "0.14.1"
rand = "0.9.2"
regex = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
