[package]
name = "wireguard-install"
version = "0.1.0"
edition = "2024"
authors = ["WireGuard Install Maintainers <faruk.omer.erdem@proton.me>"]
description = "WireGuard VPN server installer and management tool"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
dialoguer = "0.12.0"
dotenv = "0.15.0"
heim-virt = "0.0.11"
libc = "0.2.180"
netwatcher = "0.4.1"
qrcode = "0.14.1"
rand = "0.9.2"
regex = "1.10.0"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.deb]
maintainer = "WireGuard Install Maintainers <faruk.omer.erdem@proton.me>"
depends = "$auto"
section = "net"
priority = "optional"
license-file = "LICENSE"
assets = [
    ["target/release/wireguard-install", "usr/local/bin/wireguard-install", "755"],
]
maintainer-scripts = "packaging/debian"
extended-description = "A zero-configuration WireGuard VPN server installer and management tool with automated setup and client management."
